# distributed-mapper

./: .gitignore  LICENSE  README.md
cpp/: CMakeLists.txt  DistributedMapperConfig.cmake.in
cpp/scripts/: runDistributedMapper.cpp
cpp/src/: DistributedMapper.cpp  DistributedMapper.h  DistributedMapperUtils.h  MultiRobotUtils.cpp  MultiRobotUtils.h
cpp/tests/: CMakeLists.txt  testBetweenChordalFactor.cpp  testDistributedMapper.cpp  testRobustDistMapping.cpp
data/blocks_world/16robots/: 0.g2o  11.g2o  13.g2o  3.g2o  5.g2o  6.g2o
data/blocks_world/25robots/: 1.g2o  10.g2o  12.g2o  17.g2o  22.g2o  4.g2o  fullGraph.g2o
data/blocks_world/2robots/: fullGraph.g2o
data/blocks_world/36robots/: 1.g2o  12.g2o  23.g2o  34.g2o  7.g2o  fullGraph.g2o
data/blocks_world/49robots/: 10.g2o  11.g2o  14.g2o  15.g2o  16.g2o  20.g2o  21.g2o  25.g2o  26.g2o  30.g2o  33.g2o  34.g2o  37.g2o  6.g2o  9.g2o  fullGraph.g2o
data/blocks_world/4robots/: 2.g2o  fullGraph.g2o
data/blocks_world/9robots/: 8.g2o  fullGraph.g2o
data/example_16robots/: 15.g2o  9.g2o
data/example_25robots/: 18.g2o  19.g2o  2.g2o  20.g2o  3.g2o  5.g2o  6.g2o
data/example_36robots/: 13.g2o  14.g2o  18.g2o  19.g2o  24.g2o  3.g2o  35.g2o
data/example_49robots/: 13.g2o  17.g2o  22.g2o  31.g2o  4.g2o  43.g2o  8.g2o
data/example_4robots/: 3.g2o
data/example_9robots/: 0.g2o  3.g2o  7.g2o
distributed_mapper_core/cpp/: CMakeLists.txt
distributed_mapper_core/cpp/scripts/: runDistributedMapper.cpp
distributed_mapper_core/cpp/src/: BetweenChordalFactor.h  DistributedMapper.cpp  DistributedMapper.h  DistributedMapperUtils.h  MultiRobotUtils.cpp  MultiRobotUtils.h
distributed_mapper_core/cpp/tests/: testBetweenChordalFactor.cpp  testDistributedMapper.cpp
distributed_mapper_core/data/blocks_world/16robots/: 0_optimizedTUM.txt  1.g2o  10.g2o  12.g2o  12_optimizedTUM.txt  14_optimizedTUM.txt  1_optimizedTUM.txt  2.g2o  3_optimizedTUM.txt  7.g2o  9_optimizedTUM.txt  fullGraph.g2o
distributed_mapper_core/data/blocks_world/25robots/: 0.g2o  0_optimizedTUM.txt  10_optimizedTUM.txt  11_optimizedTUM.txt  12_optimizedTUM.txt  13.g2o  13_optimizedTUM.txt  14_optimizedTUM.txt  15.g2o  15_optimizedTUM.txt  16.g2o  16_optimizedTUM.txt  17_optimizedTUM.txt  18_optimizedTUM.txt  19_optimizedTUM.txt  1_optimizedTUM.txt  20_optimizedTUM.txt  21.g2o  21_optimizedTUM.txt  22_optimizedTUM.txt  23_optimizedTUM.txt  24_optimizedTUM.txt  2_optimizedTUM.txt  3_optimizedTUM.txt  4_optimizedTUM.txt  5_optimizedTUM.txt  6_optimizedTUM.txt  7.g2o  7_optimizedTUM.txt  8.g2o  8_optimizedTUM.txt  9_optimizedTUM.txt
distributed_mapper_core/data/example_16robots/: 10_optimizedTUM.txt  11_optimizedTUM.txt  13_optimizedTUM.txt  14.g2o  15_optimizedTUM.txt  2_optimizedTUM.txt  4.g2o  4_optimizedTUM.txt  5_optimizedTUM.txt  6_optimizedTUM.txt  7_optimizedTUM.txt  8.g2o  8_optimizedTUM.txt
distributed_mapper_core/data/example_25robots/: 11.g2o  14.g2o  23.g2o  24.g2o  9.g2o
distributed_mapper_core/data/example_2robots/: 0.g2o  0_optimizedTUM.txt  1.g2o  1_optimizedTUM.txt
distributed_mapper_core/data/example_36robots/: 0.g2o  10.g2o  15.g2o  16.g2o  21.g2o  22.g2o  27.g2o  28.g2o  30.g2o  4.g2o  8.g2o
distributed_mapper_core/data/example_49robots/: 29.g2o  3.g2o  32.g2o  35.g2o  38.g2o  39.g2o  41.g2o  48.g2o
distributed_mapper_core/data/example_4robots/: 0.g2o  1_optimizedTUM.txt  2_optimizedTUM.txt
distributed_mapper_core/data/example_9robots/: 2.g2o
distributed_mapper_core/docker/distributed_mapper/: Dockerfile  README.md
distributed_mapper_core/matlab/: plotTrace.m
distributed_mapper_msgs/: CMakeLists.txt  package.xml
distributed_mapper_msgs/msg/: FinishedStage.msg  Indices.msg  InterRobotEstimate.msg  Keyframe.msg  Keyframes.msg  Keypoint.msg  LinearizedEstimate.msg  Measurement.msg  StampedPointCloud.msg  StartOptimization.msg
matlab/: plotTrace.m
(+78 files in other folders)
